Updates after feedback from initial presentation
Various enhancements and bug fixes

--- a/app/src/main/res/layout/content_playground.xml
+++ b/app/src/main/res/layout/content_playground.xml
@@ -81,7 +81,7 @@
         android:background="#fff"
         android:layout_margin="4dp"/>
 
-    <com.ableandroid.materialmotion.TimingVisualizer
+    <com.ableandroid.materialmotion.playground.TimingVisualizer
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
