--- a/app/src/main/res/layout/content_intentional_start.xml
+++ b/app/src/main/res/layout/content_intentional_start.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:background="@color/grey_300"
         android:padding="16dp"
-        android:weightSum="3">
+        android:weightSum="4">
 
         <ImageView
             android:id="@+id/nat_btn_1"
@@ -36,7 +36,6 @@
             android:gravity="center"
             android:src="@drawable/vct_double_checkmark"/>
 
-
         <ImageView
             android:id="@+id/nat_btn_3"
             android:layout_width="@dimen/vct_btn_size"
@@ -44,7 +43,17 @@
             android:layout_weight="1"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:gravity="center"
-            android:src="@drawable/vct_wrong"/>
+            android:src="@drawable/vct_arrows_opposite"/>
+
+
+        <ImageView
+            android:id="@+id/nat_btn_4"
+            android:layout_width="@dimen/vct_btn_size"
+            android:layout_height="@dimen/vct_btn_size"
+            android:layout_weight="1"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:gravity="center"
+            android:src="@drawable/vct_arrows_multidir"/>
 
     </LinearLayout>
 
