--- a/app/src/main/res/layout/content_responsive.xml
+++ b/app/src/main/res/layout/content_responsive.xml
@@ -13,7 +13,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/grey_200"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".TouchFeedbackActivity"
+    tools:context=".ResponsiveActivity"
     tools:showIn="@layout/act_responsive">
 
 
